// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbstractCLI with mocked child_process.spawn changesets.info({"projectId":"project-id","branchId":"branch-id","sha":"commit-sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "changeset",
    "project-id",
    "--commit",
    "commit-sha",
    "--branch",
    "branch-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn collections.info({"projectId":"project-id","branchId":"branch-id","collectionId":"collection-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "collection",
    "project-id",
    "collection-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn collections.list({"projectId":"project-id","branchId":"branch-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "collections",
    "project-id",
    "--branch",
    "branch-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn collections.list({"projectId":"project-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "collections",
    "project-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.info({"projectId":"project-id","branchId":"branch-id","fileId":"file-id","sha":"sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commit",
    "project-id",
    "sha",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.info({"projectId":"project-id","branchId":"branch-id","fileId":"file-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commit",
    "project-id",
    "branch-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.info({"projectId":"project-id","branchId":"branch-id","sha":"layer-sha","fileId":"file-id","pageId":"page-id","layerId":"layer-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commit",
    "project-id",
    "layer-sha",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.info({"projectId":"project-id","branchId":"branch-id","sha":"sha","fileId":"file-id","pageId":"page-id","layerId":"layer-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commit",
    "project-id",
    "sha",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.info({"projectId":"project-id","branchId":"branch-id","sha":"sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commit",
    "project-id",
    "sha",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.info({"projectId":"project-id","branchId":"branch-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commit",
    "project-id",
    "branch-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.list({"projectId":"project-id","branchId":"branch-id","fileId":"file-id","sha":"sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commits",
    "project-id",
    "branch-id",
    "--file-id",
    "file-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.list({"projectId":"project-id","branchId":"branch-id","fileId":"file-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commits",
    "project-id",
    "branch-id",
    "--file-id",
    "file-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.list({"projectId":"project-id","branchId":"branch-id","sha":"layer-sha","fileId":"file-id","pageId":"page-id","layerId":"layer-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commits",
    "project-id",
    "branch-id",
    "--layer-id",
    "layer-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.list({"projectId":"project-id","branchId":"branch-id","sha":"sha","fileId":"file-id","pageId":"page-id","layerId":"layer-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commits",
    "project-id",
    "branch-id",
    "--layer-id",
    "layer-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.list({"projectId":"project-id","branchId":"branch-id","sha":"sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commits",
    "project-id",
    "branch-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn commits.list({"projectId":"project-id","branchId":"branch-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "commits",
    "project-id",
    "branch-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn data.layer({"projectId":"project-id","branchId":"branch-id","sha":"layer-sha","fileId":"file-id","pageId":"page-id","layerId":"layer-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "layer",
    "data",
    "project-id",
    "layer-sha",
    "file-id",
    "layer-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn data.layer({"projectId":"project-id","branchId":"branch-id","sha":"sha","fileId":"file-id","pageId":"page-id","layerId":"layer-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "layer",
    "data",
    "project-id",
    "sha",
    "file-id",
    "layer-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn files.info({"projectId":"project-id","branchId":"branch-id","fileId":"file-id","sha":"sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "file",
    "project-id",
    "sha",
    "file-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn files.info({"projectId":"project-id","branchId":"branch-id","fileId":"file-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "file",
    "project-id",
    "branch-id",
    "file-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn files.list({"projectId":"project-id","branchId":"branch-id","sha":"commit-sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "files",
    "project-id",
    "commit-sha",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn files.list({"projectId":"project-id","branchId":"branch-id","sha":"sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "files",
    "project-id",
    "sha",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn files.list({"projectId":"project-id","branchId":"branch-id","sha":"sha"}) 2`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "files",
    "project-id",
    "sha",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn files.list({"projectId":"project-id","branchId":"branch-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "files",
    "project-id",
    "branch-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn layers.info({"projectId":"project-id","branchId":"branch-id","sha":"layer-sha","fileId":"file-id","pageId":"page-id","layerId":"layer-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "layer",
    "meta",
    "project-id",
    "layer-sha",
    "file-id",
    "layer-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn layers.info({"projectId":"project-id","branchId":"branch-id","sha":"sha","fileId":"file-id","pageId":"page-id","layerId":"layer-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "layer",
    "meta",
    "project-id",
    "sha",
    "file-id",
    "layer-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn layers.list({"projectId":"project-id","branchId":"branch-id","fileId":"file-id","sha":"sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "layers",
    "project-id",
    "sha",
    "file-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn layers.list({"projectId":"project-id","branchId":"branch-id","fileId":"file-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "layers",
    "project-id",
    "branch-id",
    "file-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn pages.info({"projectId":"project-id","branchId":"branch-id","fileId":"file-id","pageId":"page-id","sha":"sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "file",
    "project-id",
    "sha",
    "file-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn pages.info({"projectId":"project-id","branchId":"branch-id","fileId":"file-id","pageId":"page-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "file",
    "project-id",
    "branch-id",
    "file-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn pages.list({"projectId":"project-id","branchId":"branch-id","fileId":"file-id","sha":"sha"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "file",
    "project-id",
    "sha",
    "file-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;

exports[`AbstractCLI with mocked child_process.spawn pages.list({"projectId":"project-id","branchId":"branch-id","fileId":"file-id"}) 1`] = `
Array [
  "./fixtures/abstract-cli",
  Array [
    "--user-token",
    "abstract-token",
    "--api-url",
    "https://api.goabstract.com",
    "file",
    "project-id",
    "branch-id",
    "file-id",
  ],
  Object {
    "cwd": "<PROJECT_ROOT>",
  },
]
`;
